# had-badge-mod

./: .gitattributes  .gitignore  CMakeLists.txt  CONVENTIONS.md  LICENSE.txt  README.md  partitions.csv  sdkconfig.defaults
components/apps/: CMakeLists.txt  app_manager.c  diag.c  follow.c  gps_app.c  launcher.c  messages.c  nodes.c  packets.c  radar.c  settings_app.c  track.c  tracker.c
components/apps/include/apps/: app_iface.h  app_manager.h  launcher.h
components/ble/: CMakeLists.txt  ble.c
components/ble/include/ble/: ble.h
components/bsp/include/: app_config.h  board_pins.h
components/core/: CMakeLists.txt  eventbus.c  nodedb.c  settings.c  settings_json.c  settings_nvs.c
components/core/include/core/: eventbus.h  nodedb.h  settings.h  settings_json.h  settings_nvs.h
components/drivers/: CMakeLists.txt  backlight.c  battery_adc.c  display_nv3007.c  gps_uart.c  kbd_tca8418.c  power_mgmt.c  radio_sx1262.c  wifi.c
components/drivers/include/drivers/: backlight.h  battery.h  display.h  gps.h  keyboard.h  power_mgmt.h  radio.h  wifi.h
components/mesh/: CMakeLists.txt  aes.c  channels.c  mesh_crypto.c  meshtastic_pb.c  packet.c  regions.c
components/mesh/include/mesh/: aes.h  channels.h  mesh_crypto.h  meshtastic_pb.h  packet.h  regions.h
components/mesh/proto/: meshtastic.options  meshtastic.proto
components/net/: CMakeLists.txt  backend_meshtastic.c  message.c  router.c
components/net/include/net/: ack_queue.h  backend.h  backend_meshtastic.h  dedup.h  message.h
components/net/portable/: ack_queue.c  dedup.c
components/radio/: CMakeLists.txt  radio_task.c
components/radio/include/radio/: radio_task.h
components/services/: CMakeLists.txt  battery_svc.c  gps_svc.c  mesh_svc.c  ota_svc.c  status_svc.c  time_svc.c  track_svc.c  web_svc.c  wifi_svc.c
components/services/include/services/: ota.h  services.h  track.h  web.h
components/ui/: CMakeLists.txt  frame.c  icons.c  launcher_strip.c  menubar.c  sidebar.c  theme.c
components/ui/portable/: theme_map.c
components/util/: CMakeLists.txt  geo.c  gps_state.c  map_proj.c  nmea.c  radar_proj.c  vmap.c
docs/: astro.config.mjs  package-lock.json  package.json
hardware/case/: README.md  communicator-gps-case.stl
host_tests/: CMakeLists.txt  test_ack_queue.c  test_aes.c  test_channels.c  test_dedup.c  test_eventbus.c  test_geo.c  test_gps.c  test_main.c  test_map.c  test_mesh_crypto.c  test_meshtastic_pb.c  test_nmea.c  test_nodedb.c  test_packet.c  test_radar.c  test_regions.c  test_settings.c  test_settings_json.c  test_theme_layout.c  test_util.h
main/: CMakeLists.txt  app_main.c  idf_component.yml
tools/: osm2vmap.py  run_host_tests.ps1
(+40 files in other folders)
